           Libre de Bruxelles (ULB), Darafei Praliaskouski)
  - #4171, ST_3DLineInterpolatePoint (Julien Cabieces, Vincent Mora)

* Enhancements and fixes *
  - #4153, ST_Segmentize now splits segments proportionally (Darafei
           Praliaskouski).
  - #4162, ST_DWithin documentation examples for storing geometry and
           radius in table (Darafei Praliaskouski, github user Boscop).
  - #4161, MVT: Drop geometries smaller than the resolution (Raúl Marín)
  - #4176, ST_Intersects supports GEOMETRYCOLLECTION (Darafei Praliaskouski)
  - #4181, ST_AsMVTGeom: Avoid type changes due to validation (Raúl Marín)
  - #4183, ST_AsMVTGeom: Drop invalid geometries after simplification (Raúl Marín)
  - #4188, Avoid division by zero in KMeans (Raúl Marín)
  - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
  - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
  - #4211, Fix ST_Subdivide for minimal exterior ring with minimal hole (Darafei
           Praliaskouski)
  - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
  - #4215, Use floating point compare in ST_DumpAsPolygons (Darafei Praliaskouski)
  - #4155, Support for GEOMETRYCOLLECTION, POLYGON, TIN, TRIANGLE in
           ST_LocateBetween and ST_LocateBetweenElevations (Darafei Praliaskouski)
  - #2767, Documentation for AddRasterConstraint optional parameters (Sunveer Singh)
  - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
  - #4190, Avoid undefined behaviour in gserialized_estimate (Raúl Marín)
  - #4233, Fix undefined behaviour in gserialized_spgist_picksplit_nd (Raúl Marín)
  - #4247, Avoid undefined behaviour in next_float functions (Raúl Marín)
  - #4249, Fix undefined behaviour in raster intersection (Raúl Marín)
  - #4246, Fix undefined behaviour in ST_3DDistance (Raúl Marín)
  - #4244, Avoid unaligned memory access in BOX2D_out (Raúl Marín)
  - #4139, Make mixed-dimension ND index build tree correctly (Darafei Praliaskouski,